--- a/pages/map.html
+++ b/pages/map.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="map.css">
 <div class="trigger"></div>
     <div class="modal">
         <div class="modal-content">
@@ -11,7 +12,7 @@
             
         </div>
     </div>
-	
+
 
 <div id="map"></div>
 
@@ -19,6 +20,7 @@
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap">
 </script>
+<script src="map.js"></script>
 
 
 
